--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -5,15 +5,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #0070f3;
 }
 
 .main {
+  width: '100%';
   padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: red;
 }
 
 .footer {
@@ -67,8 +70,15 @@
   border-radius: 5px;
   padding: 0.5rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family:
+    Menlo,
+    Monaco,
+    Lucida Console,
+    Liberation Mono,
+    DejaVu Sans Mono,
+    Bitstream Vera Sans Mono,
+    Courier New,
+    monospace;
 }
 
 .grid {
@@ -89,7 +99,9 @@
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition:
+    color 0.15s ease,
+    border-color 0.15s ease;
 }
 
 .card:hover,
