--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ a {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: #e50000;
     --foreground: 224 71.4% 4.1%;
     --card: 0 0% 100%;
     --card-foreground: 224 71.4% 4.1%;
